# procon-workspace

./: .editorconfig  .gitignore  .shellcheckrc  .taplo.toml  .yamllint.yaml  Cargo.toml  LICENSE  README.md  aliases  build.sh  bundle.sh  check.sh  clip.sh  common.sh  download.sh  pyproject.toml  run.sh  submit.sh  test.sh  tools.sh
.github/scripts/: lint_shell.sh
.github/workflows/: ci.yaml  shell.yaml  toml.yaml  yaml.yaml
submission/: Cargo.toml
