[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
itertools = "0.13.0"
# petgraph = "0.6.5"
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.8.5" 
# superslice = "1.0.0"
reprol = { path = "../reprol/", package = "reprol" }

[workspace]
resolver = "2"
members = [ "./submission" ]

