[package]
name = "procon-ws"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
itertools = "0.13.0"
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.8.5" 
reprol = { path = "../reprol/", package = "reprol" }

[workspace]
resolver = "2"
members = [ "./submission" ]

